--- a/form.html
+++ b/form.html
@@ -18,13 +18,13 @@
 <body>
     <form>
         <label for="name">Name</label>&nbsp;
-        <input type="text" placeholder="enter name" id="name"><br><br>
+        <input type="text" placeholder="enter name" id="name" onblur="s('name')"><br><br>
         <label for="age">Age</label>&nbsp;
-        <input type="number" placeholder="enter age" id="age"><br><br>
+        <input type="number" placeholder="enter age" id="age" onblur="s('name')"><br><br>
         <label for="email">Email</label>&nbsp;
-        <input type="email" placeholder="enter Email" id="email"><br><br>
+        <input type="email" placeholder="enter Email" id="email" onblur="s('name')"><br><br>
         <label for="password">Password</label>&nbsp;
-        <input type="password" placeholder="enter password" id="password"><br><br>
+        <input type="password" placeholder="enter password" id="password" onblur="s('name')"><br><br>
         <button onclick="return run();">submit</button>
     </form>
     <script src="/form.js"></script>
